Add stock/price endpoint
